// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Searchbar /> should get movies and invoke callback on Enter key 1`] = `
<div>
  <div
    class="sc-gsTCUz iWCQzw"
  >
    <h1
      class="sc-dlfnbm SSaae"
    >
      MOVIES
    </h1>
    <div
      class="sc-hKgILt fHYTMW"
    >
      <div
        class="ui small fluid icon input"
        data-testid="search-input"
      >
        <input
          placeholder="Input Movie Title..."
          type="text"
          value="star wars"
        />
        <i
          aria-hidden="true"
          class="search icon"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Searchbar /> should render search text in Input el 1`] = `
<div>
  <div
    class="sc-gsTCUz iWCQzw"
  >
    <h1
      class="sc-dlfnbm SSaae"
    >
      MOVIES
    </h1>
    <div
      class="sc-hKgILt fHYTMW"
    >
      <div
        class="ui small fluid icon input"
        data-testid="search-input"
      >
        <input
          placeholder="Input Movie Title..."
          type="text"
          value="star wars"
        />
        <i
          aria-hidden="true"
          class="search icon"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Searchbar /> should render the various inner Elements 1`] = `
<div>
  <div
    class="sc-gsTCUz iWCQzw"
  >
    <h1
      class="sc-dlfnbm SSaae"
    >
      MOVIES
    </h1>
    <div
      class="sc-hKgILt fHYTMW"
    >
      <div
        class="ui small fluid icon input"
        data-testid="search-input"
      >
        <input
          placeholder="Input Movie Title..."
          type="text"
          value=""
        />
        <i
          aria-hidden="true"
          class="search icon"
        />
      </div>
    </div>
  </div>
</div>
`;
